--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,11 +16,7 @@
         <activity
             android:name="com.nino.hrckaraoke.Login"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+           
         </activity>
         <activity android:name="com.nino.hrckaraoke.MainActivity" >
         </activity>
@@ -50,7 +46,13 @@
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Welcome"
-            android:label="@string/title_activity_welcome" >
+            android:label="@string/title_activity_welcome"
+            android:screenOrientation="portrait" >
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
