--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
 
     <application
@@ -16,10 +16,9 @@
         <activity
             android:name="com.nino.hrckaraoke.Login"
             android:label="@string/app_name" >
-           
         </activity>
         <activity android:name="com.nino.hrckaraoke.MainActivity" >
-              <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -53,7 +52,10 @@
             android:name="com.nino.hrckaraoke.Welcome"
             android:label="@string/title_activity_welcome"
             android:screenOrientation="portrait" >
-           
+        </activity>
+        <activity
+            android:name="com.nino.hrckaraoke.Search"
+            android:label="@string/title_activity_search" >
         </activity>
     </application>
 
