--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+         >
         <activity
             android:name="com.nino.hrckaraoke.Login"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+             >
         </activity>
-        <activity android:name="com.nino.hrckaraoke.MainActivity" >
+        <activity android:name="com.nino.hrckaraoke.MainActivity" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,27 +30,34 @@
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Request"
-            android:label="@string/title_activity_request" >
+            android:label="@string/title_activity_request"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Register"
-            android:label="@string/title_activity_register" >
+            android:label="@string/title_activity_register"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Profile"
-            android:label="@string/title_activity_profile" >
+            android:label="@string/title_activity_profile"
+            android:screenOrientation="portrait"
+             >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Previous"
-            android:label="@string/title_activity_previous" >
+            android:label="@string/title_activity_previous"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Others"
-            android:label="@string/title_activity_others" >
+            android:label="@string/title_activity_others"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Guide"
-            android:label="@string/title_activity_guide" >
+            android:label="@string/title_activity_guide"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Welcome"
