--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,18 +19,14 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             >
-             
         </activity>
         <activity android:name="com.nino.hrckaraoke.MainActivity" 
             android:screenOrientation="portrait">
-            
-                        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
-            
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Request"
@@ -70,6 +66,10 @@
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Search"
+            android:label="@string/title_activity_search" >
+        </activity>
+        <activity
+            android:name="com.nino.hrckaraoke.YourRequest"
             android:label="@string/title_activity_search" >
         </activity>
     </application>
