--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../../Downloads/facebook-android-sdk-master/facebook
+target=android-20
+android.library.reference.1=../../workspace/FacebookSDK
