basic search and request working

--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=../../workspace/FacebookSDK
+android.library.reference.1=../../../Downloads/facebook-android-sdk-master/facebook
