--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name="com.nino.hrckaraoke.Request"
             android:label="@string/title_activity_request"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.nino.hrckaraoke.Logout"
@@ -76,7 +77,6 @@
 			android:theme="@android:style/Theme.Translucent.NoTitleBar"
 			android:label="@string/app_name" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="com.nino.hrckaraoke.Logout" android:label="@string/app_name"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
